Feat[#68]: 기타, 면접 일정 등록 시 전형 결과 추가